# Project34

./: README.md  Step 0 - Inspect Dataset.ipynb  Step 0 - data inspection.ipynb  Step 1 - Preprocessing.ipynb  Step 1.1 - Preprocessing old.ipynb  Step 1.1 - Preprocessing.ipynb  Step 1.2 - Mass Localisation.ipynb  Step 2.1 - WS.ipynb  data check.py  pyproject.toml  requirements.txt
Step 0 - data_inspection NOTEBOOKS/: Step 0.1 - Inspect Dataset.ipynb  Step 0.2 - Map to XLS.ipynb  Step 0.3 - Investigate Annotation Sources.ipynb
Step 1 - preprocessing NOTEBOOKS/: Step 1.1 - Preprocessing.ipynb  Step 1.2 - Mass ROI Extraction.ipynb  Step 1.3 - Background Patch Sampling.ipynb
Step 2 - experiments NOTEBOOKS/: FINAL Step 2.1 - Tissue Classification Paper-Style Replication.ipynb  FINAL Step 2.2 - Mass Classification Paper-Style Replication.ipynb  FINAL Step 2.3 - Supporting Extension Experiments.ipynb  FINAL Step 2.4 - Mass Classification Region-Aware Extensions.ipynb  FINAL Step 2.5 - Extension Methods Appendix.ipynb  FINAL Step 2.6 - Original Image Patch Paper-Style Investigation.ipynb  FINAL Step 2.7 - Tissue Preprocessing Methodology Checks.ipynb  report graphs_and_figures.ipynb
report/: PhDThesisPSnPDF.cls  thesis-info.tex  thesis.tex
report/Abstract/: abstract.tex
report/Acknowledgement/: acknowledgement.tex
report/Appendix1/: appendix1.tex
report/Appendix2/: appendix2.tex
report/Appendix3/: appendix3.tex
report/Appendix4/: appendix4.tex
report/Chapter1/: chapter1.tex
scripts/: resume_step27_sections_3_6.py
tests/: test_protocol.py
(+16 files in other folders)
