[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "project34"
version = "0.1.0"
description = "Breast cancer screening with CNN and wavelet scattering on INbreast (paper replication)."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
